# CodeVerseLinuxDistro

./: .gitignore  README.md  SECURITY.md
configs/setup-configs/gtk-configs/gtk-3.0/: bookmarks  settings.ini
configs/setup-configs/gtk-configs/gtk-4.0/: settings.ini
configs/setup-configs/kitty/: kitty.conf
configs/setup-configs/kitty/themes/: colors.conf
configs/setup-configs/niri/: config.kdl  scripts
configs/setup-configs/niri/Keybindings/: app-keybinds.kdl  general-window-keybinds.kdl  general-workspace-keybinds.kdl  media-keybinds.kdl  miscellaneous-keybinds.kdl  mouse-navigation-keybinds.kdl  rofi-keybinds.kdl  shell-keybinds.kdl  window-navigation-keybinds.kdl  (+1 more)
configs/setup-configs/rofi/: config.rasi
configs/setup-configs/swaync/: config.json  style.css
configs/setup-configs/swayosd/: style.css  swayosd.toml
configs/setup-configs/waybar/: colors.css  config  modules.json  style.css
configs/setup-configs/zsh/: .zshrc
iso/: packages.x86_64  pacman.conf  profiledef.sh
iso/airootfs/etc/: gshadow  hostname  mkinitcpio.conf  pacman.conf  rc.conf
iso/airootfs/root/: .zshrc
iso/grub/: grub.cfg
iso/syslinux/: syslinux.cfg
pkgbuild/cvh-branding/: PKGBUILD  cvh-branding-0.1.0-1-any.pkg.tar.zst
pkgbuild/cvh-fuzzy/: PKGBUILD  cvh-fuzzy-0.1.0-1-x86_64.pkg.tar.zst  cvh-fuzzy-debug-0.1.0-1-x86_64.pkg.tar.zst
pkgbuild/cvh-fuzzy/pkg/: .gitignore
pkgbuild/cvh-icons/: PKGBUILD  cvh-icons-0.1.0-1-x86_64.pkg.tar.zst  cvh-icons-debug-0.1.0-1-x86_64.pkg.tar.zst
pkgbuild/cvh-icons/pkg/: .gitignore
repo/x86_64/: cvh-branding-0.1.0-1-any.pkg.tar.zst  cvh-fuzzy-0.1.0-1-x86_64.pkg.tar.zst  cvh-fuzzy-debug-0.1.0-1-x86_64.pkg.tar.zst  cvh-icons-0.1.0-1-x86_64.pkg.tar.zst  cvh-icons-debug-0.1.0-1-x86_64.pkg.tar.zst  cvh-linux.db  cvh-linux.files  mpvpaper-1.8-1-x86_64.pkg.tar.zst  mpvpaper-debug-1.8-1-x86_64.pkg.tar.zst
scripts/: build-iso.sh  build-packages.sh  install.sh
src/cvh-fuzzy/: Cargo.toml
src/cvh-fuzzy/src/: apps.rs  config.rs  main.rs  matcher.rs
src/cvh-icons/: Cargo.toml
src/cvh-icons/lua/: ipc_handler.lua
src/cvh-icons/lua/widgets/: file.lua  folder.lua
src/cvh-icons/src/: config.rs  main.rs
src/cvh-icons/src/daemon/: mod.rs
src/cvh-icons/src/icons/: mod.rs
src/cvh-icons/src/ipc/: mod.rs  protocol.rs
src/cvh-icons/src/lua/: api.rs  mod.rs  process.rs  stdlib.rs
src/cvh-icons/src/renderer/: mod.rs
src/cvh-icons/src/sandbox/: bubblewrap.rs  mod.rs
src/cvh-icons/src/wayland/: mod.rs
widgets/: setup-screen-share.sh  themes.json  widget.py
(+52 files in other folders)
